# TPI-Progra1

./: CMakeLists.txt  README.md  cola.c  cola.h  fecha.c  fecha.h  indice.c  indice.h  lista.c  lista.h  main.c  nodo.h  progra-tpi.cbp  tp_utils.c  tp_utils.h  validations.c  validations.h
